# wayos-relay

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  poller.py  pyproject.toml  requirements.txt
.claude/: launch.json
app/: artifacts.py  config.py  database.py  digest.py  ingest.py  main.py  models.py  parser.py  seeds.py
app/routes/: api.py  inbox.py  webhooks.py
app/services/: email_ingest.py  email_send.py  sms.py
app/static/: style.css
app/templates/: base.html  dashboard.html  detail.html  digests.html  inbox.html
seeds/: sample_messages.json
tests/: test_artifacts.py  test_digest.py  test_parser.py
